// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileList renders normally with multiple files props 1`] = `
<div
  class="root"
>
  <label
    class="labelText"
    for="multiple"
  >
    Test
  </label>
  <div
    class="inputWrapper"
  >
    <ul
      class="list standard noBullets"
    >
      <li
        class="fileListItem"
      >
        <span
          class="text brand span fileName"
        >
          testFile1.pdf
        </span>
        <button
          class="delete"
          type="button"
        >
          <div
            class="icon--old critical medium"
          >
            <svg
              class="icon s"
              height="100%"
              viewBox="0 0 480 480"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M374.8 167.6l-30.4-30.4-88.4 88.4-88.4-88.4-30.4 30.4 88.4 88.4-88.4 88.4 30.4 30.4 88.4-88.4 88.4 88.4 30.4-30.4-88.4-88.4z"
              />
            </svg>
          </div>
        </button>
      </li>
      <li
        class="fileListItem"
      >
        <span
          class="text brand span fileName"
        >
          testFile2.pdf
        </span>
        <button
          class="delete"
          type="button"
        >
          <div
            class="icon--old critical medium"
          >
            <svg
              class="icon s"
              height="100%"
              viewBox="0 0 480 480"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M374.8 167.6l-30.4-30.4-88.4 88.4-88.4-88.4-30.4 30.4 88.4 88.4-88.4 88.4 30.4 30.4 88.4-88.4 88.4 88.4 30.4-30.4-88.4-88.4z"
              />
            </svg>
          </div>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`FileList renders normally with single file props 1`] = `
<div
  class="root"
>
  <label
    class="labelText"
    for="single"
  >
    Test
  </label>
  <div
    class="inputWrapper"
  >
    <ul
      class="list standard noBullets"
    >
      <li
        class="fileListItem"
      >
        <span
          class="text brand span fileName"
        >
          testFile1.pdf
        </span>
        <button
          class="delete"
          type="button"
        >
          <div
            class="icon--old critical medium"
          >
            <svg
              class="icon s"
              height="100%"
              viewBox="0 0 480 480"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M374.8 167.6l-30.4-30.4-88.4 88.4-88.4-88.4-30.4 30.4 88.4 88.4-88.4 88.4 30.4 30.4 88.4-88.4 88.4 88.4 30.4-30.4-88.4-88.4z"
              />
            </svg>
          </div>
        </button>
      </li>
    </ul>
  </div>
</div>
`;
